# PortManager

./: .gitignore  Idee.txt  LICENSE  README.md
port-manager-ui/: index.html  package-lock.json  package.json
port-manager-ui/src/: App.tsx  types.ts
port_manager/: Cargo.toml
port_manager/crates/client/: Cargo.toml
port_manager/crates/client/src/: main.rs
port_manager/crates/common/: Cargo.toml
port_manager/crates/common/src/: lib.rs
port_manager/crates/daemon/: Cargo.toml
port_manager/crates/daemon/dashboard/: index.html
port_manager/crates/daemon/dashboard/assets/: index-BM6ZkkZY.css  index-DyeenpRB.js  index-O83f6hoX.js
port_manager/crates/daemon/src/: db.rs  main.rs
port_manager/crates/daemon/tests/: integration_test.rs
