[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
axum = "0.8.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
rusqlite = "0.31"
dirs = "5.0"
[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
